syntax = "proto3";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
option csharp_namespace = "srvProduct.protos";

package category;


service ICategoryService {  
  rpc SaveCategory(mdlCategoryWrapper) returns (mdlCategorySaveResponse);
  rpc GetCategory(mdlCategoryRequest) returns (mdlCategoryList);
}



message mdlCategoryList {
    repeated mdlCategory category=1;
}
message mdlCategoryDetails
{
    google.protobuf.StringValue language = 1;
    google.protobuf.StringValue title = 2;
    string name = 3;
    google.protobuf.StringValue shortDesc = 4;
}

// The request message containing the user's name.
message mdlCategory {
  string categoryId = 1;
  bool isActive=2;    
  google.protobuf.StringValue imageUrl=3;  
  repeated mdlCategoryDetails categoryDetail= 4;
  string modifiedBy=5;
  google.protobuf.Timestamp modifiedDt = 6;
  repeated mdlSubCategory subCategory=7;
}

message mdlSubCategory
{
  string subCategoryId = 1;
  string categoryId = 2;
  bool isActive=3;    
  google.protobuf.StringValue imageUrl=3;  
  repeated mdlCategoryDetails categoryDetail= 9;
  string modifiedBy=10;
  google.protobuf.Timestamp modifiedDt = 11;
}

message mdlSubCategoryDetails
{
    google.protobuf.StringValue language = 1;
    google.protobuf.StringValue title = 2;
    string name = 3;
    google.protobuf.StringValue shortDesc = 4;
    repeated string keywords =5;    
    repeated mdlProperty Properties =6;
}


message mdlProperty{
	int32 PropertyDisplayOrder=1;
	string name = 2;
	enmPropertyType type = 3;
	int32 minLength = 4;
	int32 maxLength = 5;	
	string regx = 6;
    repeated string option=7;
}

    enum enmPropertyType
    {
        Label=0;
        Text=1;
        Number=2;
        Date=3;
        DateTime=4;
        Select=5;
        SelectMultiple=6;
        Checkbox = 7;
        RadioButtion = 8;
    }


// The response message containing the greetings.
message mdlCategoryRequest {
  google.protobuf.StringValue categoryId= 1;
  google.protobuf.StringValue categoryName= 2;
  bool exactCategoryName =3;
  bool includeAll =4;
  bool includeActive =5;
  bool includeChild =6;  
  bool includeDetails =7;
  bool includeAllLanguage =8;
  repeated google.protobuf.StringValue language= 9;
}

message mdlSubCategoryRequest {
  google.protobuf.StringValue subCategoryId= 1;
  google.protobuf.StringValue categoryId= 2;
  repeated google.protobuf.StringValue categoryIds= 3;
  google.protobuf.StringValue subCategoryName= 4;
  bool exactsubCategoryName =3;
  bool includeAll =4;
  bool includeActive =5;
  bool includeChild =6;
  bool includeProperty=7;
  bool includeDetails =8;
  bool includeAllLanguage =9;
  repeated google.protobuf.StringValue language= 10;
}


message mdlCategoryWrapper
{
    mdlCategory category=1;
    repeated string language=2;
}

message mdlSubCategoryWrapper
{
    mdlSubCategory category=1;
    repeated string language=2;
}

message mdlCategorySaveResponse
{
	bool status=1;
	string message=2;
	string messageId =3;	
}